--- a/src/main/webapp/WEB-INF/views/info.html
+++ b/src/main/webapp/WEB-INF/views/info.html
@@ -1,35 +1,18 @@
-<!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <head>
-        <meta charset="UTF-8">
-        <title>Title</title>
-    </head>
+    <meta charset="UTF-8">
+    <title>Mankoff bank</title>
+</head>
+
+<head>
+    <title></title>
+</head>
 <body>
-<h1 class="mb-3">Список пользователей </h1>
-<table class="table">
-    <thead>
-    <tr>
-        <th>Id</th>
-        <th>Имя</th>
-        <th>Фамилия</th>
-        <th>Телефон </th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>2</td>
-        <td>Павел</td>
-        <td>Воля</td>
-        <td>74328459345</td>
-    </tr>
-    <tr>
-        <td>3</td>
-        <td>Гарик</td>
-        <td>Харламов</td>
-        <td>43215425754</td>
-    </tr>
-    </tbody>
-</table>
+<h1>Bank Info</h1>
+<!-- Комментарий -->
+<p>Mankoff Bank - системообразующий универсальный российский банк, один из лидеров рынка финансовых услуг. </p>
+<p>Количество клиентов: 190453 </p>
+<p>Количество кредитованных: 5940 </p>
 </body>
 </html>
