--- a/src/main/webapp/WEB-INF/views/user/data.html
+++ b/src/main/webapp/WEB-INF/views/user/data.html
@@ -18,23 +18,23 @@
         <tbody>
             <tr>
                 <td th:text="ID"></td>
-                <td th:text="${userEntity.getId()}"></td>
+                <td th:text="${user.getId()}"></td>
             </tr>
             <tr>
                 <td th:text="Имя"></td>
-                <td th:text="${userEntity.getFirstName()}"></td>
+                <td th:text="${user.getFirstName()}"></td>
             </tr>
             <tr>
                 <td th:text="Фамилия"></td>
-                <td th:text="${userEntity.getLastName()}"></td>
+                <td th:text="${user.getLastName()}"></td>
             </tr>
             <tr>
                 <td th:text="Возраст"></td>
-                <td th:text="${userEntity.getAge()}"></td>
+                <td th:text="${user.getAge()}"></td>
             </tr>
             <tr>
                 <td th:text="Город"></td>
-                <td th:text="${userEntity.getCity()}"></td>
+                <td th:text="${user.getCity()}"></td>
             </tr>
         </tbody>
     </table>
